--- a/hyper-param-home-3435.conf
+++ b/hyper-param-home-3435.conf
@@ -1,6 +1,6 @@
 [hparam]
-data = /research/king3/ik_grp/wchen/amazon_review_data/min_4_Home_and_Kitchen_5/train_noex5_2019_12_12.pt
-pre_word_vecs = /research/king3/ik_grp/wchen/amazon_review_data/min_4_Home_and_Kitchen_5wv_noex5_2019_12_12.npz
+data = ../../datasets/min_4_Home_and_Kitchen_5/train_noex5_2019_12_12.pt
+pre_word_vecs = ../../datasets/min_4_Home_and_Kitchen_5wv_noex5_2019_12_12.npz
 save_model = saved_models/home_3435/
 log = logs/home_3435/
 interval = 100
