--- a/hyper-param-movies-520.conf
+++ b/hyper-param-movies-520.conf
@@ -1,6 +1,6 @@
 [hparam]
-data = /research/king3/ik_grp/wchen/amazon_review_data/min_4_Movies_and_TV_5/train_noex5_2019_12_12.pt
-pre_word_vecs = /research/king3/ik_grp/wchen/amazon_review_data/min_4_Movies_and_TV_5wv_noex5_2019_12_12.npz
+data = ../../datasets/min_4_Movies_and_TV_5/train_noex5_2019_12_12.pt
+pre_word_vecs = ../../datasets/min_4_Movies_and_TV_5wv_noex5_2019_12_12.npz
 save_model = saved_models/movies_520/
 log = logs/movies_520/
 interval = 100
