--- a/hyper-param-sport-9527.conf
+++ b/hyper-param-sport-9527.conf
@@ -1,6 +1,6 @@
 [hparam]
-data = /research/king3/ik_grp/wchen/amazon_review_data/min_4_reviews_Sports_and_Outdoors_5/train_noex5_2019_12_12.pt
-pre_word_vecs = /research/king3/ik_grp/wchen/amazon_review_data/min_4_reviews_Sports_and_Outdoors_5wv_noex5_2019_12_12.npz
+data = ../../datasets/min_4_reviews_Sports_and_Outdoors_5/train_noex5_2019_12_12.pt
+pre_word_vecs = ../../datasets/min_4_reviews_Sports_and_Outdoors_5wv_noex5_2019_12_12.npz
 save_model = saved_models/sport_9527/
 log = logs/sport_9527/
 interval = 100
